--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@googlemaps/js-api-loader": "^2.0.1",
     "@supabase/supabase-js": "^2.58.0",
     "@types/pg": "^8.15.5",
+    "lucide-react": "^0.562.0",
     "next": "^14.0.3",
     "pg": "^8.16.3",
     "react": "^18.2.0",
