--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^2.0.1",
+    "@react-pdf/renderer": "^4.3.2",
     "@supabase/supabase-js": "^2.58.0",
     "@types/pg": "^8.15.5",
     "lucide-react": "^0.562.0",
@@ -20,7 +21,6 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "tunnelmole": "^2.2.15",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
     "autoprefixer": "^10.4.16",
@@ -28,6 +28,8 @@
     "eslint-config-next": "^14.0.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
+    "tsx": "^4.21.0",
+    "tunnelmole": "^2.2.15",
     "typescript": "^5.3.2"
   }
 }
