--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^2.0.1",
@@ -14,7 +14,7 @@
     "@supabase/supabase-js": "^2.58.0",
     "@types/pg": "^8.15.5",
     "lucide-react": "^0.562.0",
-    "next": "^14.0.3",
+    "next": "^16.0.0",
     "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
