fixed amplify yml issue

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
                 - 'npm ci --cache .npm --prefer-offline'
         build:
             commands:
-                - 'env | grep -E "^(NEXT_PUBLIC_SUPABASE_URL|SUPABASE_SECRET_KEY|NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY|NEXT_PUBLIC_GOOGLE_PLACES_API_KEY|MESSAGING_MOCK_MODE|MESSAGING_EMAIL_ENABLED|MESSAGING_MS_CLIENT_ID|MESSAGING_MS_CLIENT_SECRET|MESSAGING_MS_TENANT_ID|MESSAGING_MS_SENDER_EMAIL|MESSAGING_WHATSAPP_ENABLED|MESSAGING_WA_PHONE_NUMBER_ID|MESSAGING_WA_ACCESS_TOKEN)=" >> .env.production'
+                - 'env | grep -E "^(NEXT_PUBLIC_SUPABASE_URL|SUPABASE_SECRET_KEY|NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY|NEXT_PUBLIC_GOOGLE_PLACES_API_KEY|MESSAGING_MOCK_MODE|MESSAGING_EMAIL_ENABLED|MESSAGING_MS_CLIENT_ID|MESSAGING_MS_CLIENT_SECRET|MESSAGING_MS_TENANT_ID|MESSAGING_MS_SENDER_EMAIL|MESSAGING_WHATSAPP_ENABLED|MESSAGING_WA_PHONE_NUMBER_ID|MESSAGING_WA_ACCESS_TOKEN)=" >> .env.production || true'
                 - 'npm run build'
     artifacts:
         baseDirectory: .next
